2019-11-27  Vladimir Makarov  <vmakarov@redhat.com>

PR rtl-optimization/90007
	* recog.c (constrain_operands): Permit hard registers too for
	memory when LRA is used.

2019-11-27  Vladimir Makarov  <vmakarov@redhat.com>

	PR rtl-optimization/90007
	* gcc.target/i386/pr90007.c: New test.



git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@278770 138bc75d-0d04-0410-961f-82ee72b054a4